# hedra-core

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  build-windows.sh  build.sh
.github/workflows/: build.yml
src/: export.h  hedra.cpp  hedra.h  mathf.h  vectormath.h
src/fastnoise-simd/: FastNoiseSIMD.cpp  FastNoiseSIMD.h  FastNoiseSIMD_internal.cpp  FastNoiseSIMD_internal.h
src/meshing/: block.h  blocktype.h  marchingcubes.cpp  marchingcubes.h  mesher.cpp  mesher.h  painter.cpp  painter.h  tables.h  vertexData.h
src/meshoptimizer/: LICENSE.md  meshoptimizer.h  simplifier.cpp
